nodel-webui-js/src/theme.less
/* ... */
.meter {
  height: @meter-outer-height;
  position: relative;
  display: inline-block;
  margin-bottom: @line-height-computed;
  & p {
    text-align: center;
    margin: 0;
  }
  & > div {
    height: @meter-height;
    width: @meter-width;
    position: relative;
    display: inline-block;
    & > div {
      position: absolute;
      width: @meter-width;
      display: block;
    }
  }
  & div.base {
    position: absolute;
    width: @meter-width;
    display: block;
    height: @meter-height;
    border-radius: @border-radius-base;
    background-color: @btn-default-bg;
  }
  & div.bar {
    clip: rect(@meter-height, @meter-width, @meter-height, 0px);
    & > div:first-child {
      height: @meter-red-height;
      border-radius: @border-radius-base @border-radius-base 0 0;
      & + div {
        height: @meter-yellow-height;
        & + div {
          height: @meter-green-height;
          border-radius: 0 0 @border-radius-base @border-radius-base;
        }
      }
    }
  }
  &[data-type='horizontal'] {
    height: @meter-width;
    margin-bottom: 20px;
    width: @meter-height;
    margin-right: 40px;
    overflow: hidden;
    & > div {
      transform: rotate(90deg) translateY(-100%);
      transform-origin: top left;
    }
    & p {
      text-align: left;
      margin: 0;
      width: @meter-width;
      position: absolute;
      top: 5px;
      right: -35px;
    }
  }
}
.status.label:empty, .signal.label:empty {
  display: initial;
  &:after {
    content: "\00a0";
  }
}
.generate-meter-colour-green(@i: 0) when (@i < 80) {
  .meter-colour-@{i} {
    @j: (@i * 1.25);
    background-color: mix(@alert-label-success-bg, @alert-label-default-bg, @j);
  }
  .generate-meter-colour-green((@i + 1));
}
.generate-meter-colour-yellow(@i: 80) when (@i < 90) {
  .meter-colour-@{i} {
    @j: ((@i - 80) * 10);
    background-color: mix(@alert-label-warning-bg, @alert-label-success-bg, @j);
  }
  .generate-meter-colour-yellow((@i + 1));
}
.generate-meter-colour-red(@i: 90) when (@i <= 100) {
  .meter-colour-@{i} {
    @j: ((@i - 90) * 10);
    background-color: mix(@alert-label-danger-bg, @alert-label-warning-bg, @j);
  }
  .generate-meter-colour-red((@i + 1));
}
.generate-meter-colour-green();
.generate-meter-colour-yellow();
.generate-meter-colour-red();
.range {
  form {
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    position: relative;
    overflow: hidden;
    > output {
      position: absolute;
      top: 0;
      left: 15px;
      pointer-events: none;
    }
    > output.nudge {
      left: 58px;
    }
    .nudge {
      border-radius: 50%;
      height: 38.25px;
    }
    .nudge-down {
      margin-right: 5px;
    }
    .nudge-up {
      margin-left: 5px;
    }
  }
  &[data-type="vertical"] {
    form {
      transform: rotate(270deg) translate(-100%);
      transform-origin: top left;
      > output {
        height: 40px;
        transform: rotate(90deg);
        transform-origin: center;
      }
      .nudge {
        transform: rotate(90deg);
      }
    }
  }
  &[data-type="mute"] {
    input[type="range"] {
      width: calc(100% - 60px);
      float: left;
      margin-right: 5px;
    }
    .btn {
      float: right;
    }
    .nudge-up {
      margin-left: 0;
      margin-right: 5px;
    }
  }
}
input[type=range] {
  -webkit-appearance: none;
  background: @btn-default-bg;
  border: 1px solid @btn-default-bg;
  width: 100%;
  height: @range-height;
  border-radius: @border-radius-base;
  padding: 0;
  pointer-events: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: @range-height;
  background: @btn-default-bg;
  border: none;
  border-radius: @border-radius-base;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: @range-height;
  background: @btn-default-bg;
  border: none;
  border-radius: @border-radius-base;
  padding: 0;
}
input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: 1px solid @btn-success-border;
  height: @range-height;
  width: 40px;
  background: @btn-success-bg;
  border-radius: @border-radius-base;
  pointer-events: auto;
}
input[type=range]::-moz-range-thumb {
  border: 1px solid @btn-success-border;
  height: @range-height;
  width: 40px;
  background: @btn-success-bg;
  border-radius: @border-radius-base;
  pointer-events: auto;
}
input[type=range]::-ms-thumb {
  border: 1px solid @btn-success-border;
  height: @range-height-ms;
  width: 40px;
  background: @btn-success-bg;
  border-radius: @border-radius-base;
  pointer-events: auto;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: @btn-default-bg;
}
input[type=range]:-moz-focusring{
  outline: 1px solid white;
  outline-offset: -1px;
}
input[type=range]::-ms-track {
  width: 100%;
  height: @range-height;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: @btn-default-bg;
  border-radius: @border-radius-base;
}
input[type=range]::-ms-fill-upper {
  background: @btn-default-bg;
  border-radius: @border-radius-base;
}
div.row > div > .btn, div.row > div > .btn-group, div.row > div > .btn-group-vertical, div.row > div > .nav-pills, .range {
  margin-bottom: @form-group-margin-bottom;
}
table.btn-grid {
  table-layout: fixed;
  background: transparent;
  width: 100%;
  margin-bottom: @form-group-margin-bottom;
  & td {
    padding: 3px;
  }
  & td:first-child {
    padding-left: 0;
  }
  & td:last-child {
    padding-right: 0;
  }
  & tr:first-child td {
    padding-top: 0;
  }
  & tr:last-child td {
    padding-bottom: 0;
  }
}
#confirmkeypad {
  max-width: 300px;
  margin: 40px auto 20px;
  & .row {
    margin-left: 5px;
    margin-right: 5px;
  }
  & .col-xs-4, & .col-xs-12 {
    padding-left: 5px;
    padding-right: 5px;
  }
}
.row.spacer {
  margin-top: 30px;
  &:first-child {
    margin-top: 0;
  }
}
/* ... */

